# ffbeast-pithouse

./: .gitignore  LICENSE  README.md  Readme.md  hid-dump.cjs  index.html  lint_report.txt  main.js  package-lock.json  package.json  preload.cjs
FFBeast-nightly/: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  download_icons.js
FFBeast-nightly/apps/configurator/src-tauri/: Cargo.toml  tauri.conf.json
FFBeast-nightly/apps/configurator/src-tauri/capabilities/: default.json
FFBeast-nightly/apps/configurator/src-tauri/icons/: icon.icns
FFBeast-nightly/apps/configurator/src-tauri/src/: lib.rs  main.rs
FFBeast-nightly/apps/launcher/src-tauri/: Cargo.toml  check_output.txt  errors.txt  keyboard_profiles.json  launcher_games.db  tauri.conf.json
FFBeast-nightly/apps/launcher/src-tauri/capabilities/: default.json
FFBeast-nightly/apps/launcher/src-tauri/icons/: icon.icns
FFBeast-nightly/apps/launcher/src-tauri/permissions/: default.json
FFBeast-nightly/apps/launcher/src-tauri/src/: lib.rs  main.rs
FFBeast-nightly/apps/launcher/src-tauri/src/data/: games.json
FFBeast-nightly/apps/launcher/src-tauri/src/models/: firmware_version.rs  game.rs  mod.rs  settings.rs  settings_field.rs  wheel_profile.rs
FFBeast-nightly/apps/launcher/src-tauri/src/services/: game_metadata.rs  game_runner.rs  game_scanner.rs  mod.rs  profile_watcher.rs  steam_library.rs
FFBeast-nightly/apps/launcher/src-tauri/src/storage/: backend.rs  mod.rs  sqlite_storage.rs  toml_data.rs  toml_storage.rs
FFBeast-nightly/docs/: ffbeast_controller_spec.md  ffbeast_ui_spec.md  project_guidelines.md  refactoring_plan.md  sodevs_launcher_spec.md
FFBeast-nightly/libs/controller/: Cargo.toml
FFBeast-nightly/libs/controller/src/: gamepad_reader.rs  hardware_service.rs  lib.rs  wheel_interface.rs  windows_gamepad.rs
FFBeast-nightly/libs/controller/src/models/: adc_settings.rs  effect_settings.rs  gpio_settings.rs  hardware_settings.rs  mod.rs  wheel_status.rs
docs/: README.md
docs/en/: connection_odrive.md  downloads.md  downloads_effect_profiles.md  downloads_flight_controls.md  downloads_utils.md  downloads_wheel.md  ffbeast_commander.md  ffbeast_commander_effects.md  ffbeast_commander_game_config.md  ffbeast_commander_profiles.md  ffbeast_commander_roadmap.md  ffbeast_commander_status.md  ffbeast_commander_telemetry.md  ffbeast_commander_trim.md  ffbeast_commander_tuning.md  ffbeast_setup.md  ffbeast_setup_controller.md  ffbeast_setup_effects.md  ffbeast_setup_license.md  ffbeast_setup_periphery.md  hardware.md  hardware_PSU.md  shop.md  (+21 more)
ffbeast-wheelhub-main - Copy (2)/: package-lock.json  package.json  vite.config.ts
ffbeast.github.io-main/: ffbeast-wheel-odrive-RC.24.1.5.hex.1.c
pedals/: README.md  loader.cjs  pedal_debug_1772828233700.txt
src/: App.tsx  config.ts  ipc-channels.ts  main.tsx  routes.ts
(+207 files in other folders)
