[package]
name = "ffbeast-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
hidapi = "2.6.4"
anyhow = "1.0.100"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
gilrs = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
] }
