[package]
name = "ffbeast-ui"
version = "1.0.0"
description = "SODevs Controller Configurator"
authors = ["SODevs Sistemas <contato@sodevs.com.br>"]
license = "MIT"
homepage = "https://sodevs.com.br"
repository = "https://github.com/osnipezzini/SODevsGameLauncher"
edition = "2021"

[lib]
name = "ffbeast_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
ffbeast-controller = { path = "../../../libs/controller" }
sodevs-input-manager = { path = "../../../libs/input_manager" }
